--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
+    "@material-tailwind/react": "^2.1.10",
     "@reduxjs/toolkit": "^2.4.0",
     "@types/react-router-dom": "^5.3.3",
     "react": "^18.3.1",
