--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.4",
+    "@tanstack/react-table": "^8.20.6",
     "@types/lodash": "^4.17.13",
     "@types/react-router-dom": "^5.3.3",
     "class-variance-authority": "^0.7.1",
